fix query user info by account id API
