# openapi.yaml
@@ -76,7 +76,7 @@ components:
       properties:
         id:
           type: string
-          example: 9704883073231981
+          example: 9704880845960482
         userId:
           type: number
           example: 1
@@ -108,19 +108,19 @@ components:
                 type: string
                 example: "Invalid signature"
 paths:
-  /partner/user/{id}:
+  /partner/user/account/{id}:
     get:
       tags:
         - "user"
-      summary: "Query user's information"
+      summary: "Query user's information by accountId"
       parameters:
         - in: path
           name: id
-          description: userId
+          description: accountId
           required: true
           schema:
-            type: number
-            example: 1
+            type: string
+            example: 9704880845960482
         - in: query
           name: partnerCode
           description: "Contact developer to get"
@@ -152,9 +152,22 @@ paths:
                 properties:
                   message:
                     type: string
-                    default: "OK"
+                    example: "OK"
                   payload:
-                    $ref: "#/components/schemas/user"
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                        example: 9704880845960482
+                      userName:
+                        type: string
+                        example: Felix Zulauf
+                      userEmail:
+                        type: string
+                        example: Jamir.Carroll@yahoo.com
+                      userPhone:
+                        type: string
+                        example: (428) 419-4212 x937
         400:
           description: "Invalid payload or expired request"
           content:
@@ -204,7 +217,7 @@ paths:
                 properties:
                   message:
                     type: string
-                    default: "OK"
+                    example: "OK"
                   payload:
                     $ref: "#/components/schemas/account"
         400:
